--- a/src/main/resources/templates/site/my-post.html
+++ b/src/main/resources/templates/site/my-post.html
@@ -47,6 +47,8 @@
 							<div class="font-size-16 text-info">
 								<a th:href="@{|/discuss/detail/${map.post.id}|}" class="text-info" th:utext="${map.post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</a>&nbsp;&nbsp;&nbsp;&nbsp;
 								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.kindName}" class="text-info"></a>
+								<span class="badge badge-secondary bg-success" th:if="${map.post.category==0}">学生帖</span>
+								<span class="badge badge-secondary bg-muted" th:if="${map.post.category==1}">老师帖</span>
 								<span class="float-right font-size-12 text-muted">
                                 赞 <i class="mr-2" th:utext="${map.likeCount}"></i>|&nbsp;&nbsp;回复 <i class="mr-2" th:utext="${map.post.commentCount}"></i>
 									&nbsp;
