--- a/src/main/resources/templates/site/forget.html
+++ b/src/main/resources/templates/site/forget.html
@@ -25,7 +25,7 @@
 						<div class="col-sm-10">
 							<input type="email"
 								   th:class="|form-control ${emailMsg!=null?'is-invalid':''}|"
-								   th:value="${user!=null?user.email:''}"
+								   th:value="${param.email}"
 								   id="email" name="email" placeholder="请输入您的邮箱！" required>
 							<div class="invalid-feedback" th:text="${emailMsg}">
 								该邮箱已注册!
@@ -36,7 +36,7 @@
 						<label for="code" class="col-sm-2 col-form-label text-right">验证码:</label>
 						<div class="col-sm-6">
 							<input type="text" th:class="|form-control ${codeMsg!=null?'is-invalid':''}|"
-								   id="code" name="code" placeholder="请输入验证码！">
+								   id="code" name="code" placeholder="请输入验证码！" th:value="${param.code}">
 							<div class="invalid-feedback" th:text="${codeMsg}">
 								验证码不正确!
 							</div>
@@ -48,9 +48,10 @@
 					<div class="form-group row mt-4">
 						<label for="password" class="col-sm-2 col-form-label text-right">新密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="password" name="password" placeholder="请输入新的密码!" required>
-							<div class="invalid-feedback">
-								密码长度不能小于8位!
+							<input type="password" class="form-control" id="password" name="password" placeholder="请输入新的密码!"
+								   th:class="|form-control ${passwordMsg!=null?'is-invalid':''}|" th:value="${param.password}" required>
+							<div class="invalid-feedback" th:text="${passwordMsg}">
+								密码长度不能小于6位!
 							</div>							
 						</div>
 					</div>							
