--- a/src/main/resources/templates/site/setting.html
+++ b/src/main/resources/templates/site/setting.html
@@ -75,7 +75,7 @@
 						<label for="old-password" class="col-sm-2 col-form-label text-right">原密码:</label>
 						<div class="col-sm-10">
 							<input type="password" th:class="|form-control ${oldPasswordMsg!=null?'is-invalid':''}|" id="old-password"
-								   name="oldPassword" placeholder="请输入原始密码！" required>
+								   name="oldPassword" placeholder="请输入原始密码！" th:value="${param.oldPassword}" required>
 							<div class="invalid-feedback" th:text="${oldPasswordMsg}">
 								密码长度不能小于8位!
 							</div>							
@@ -85,7 +85,7 @@
 						<label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
 						<div class="col-sm-10">
 							<input type="password" th:class="|form-control ${newPasswordMsg!=null?'is-invalid':''}|" id="new-password"
-								   name="newPassword" placeholder="请输入新的密码！" required>
+								   name="newPassword" placeholder="请输入新的密码！" th:value="${param.newPassword}" required>
 							<div class="invalid-feedback" th:text="${newPasswordMsg}">
 								密码长度不能小于8位!
 							</div>							
@@ -95,7 +95,7 @@
 						<label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
 						<div class="col-sm-10">
 							<input type="password" th:class="|form-control ${confirmPasswordMsg!=null?'is-invalid':''}|" id="confirm-password"
-								   name="confirmPassword" placeholder="再次输入新密码！" required>
+								   name="confirmPassword" placeholder="再次输入新密码！" th:value="${param.confirmPassword}" required>
 							<div class="invalid-feedback" th:text="${confirmPasswordMsg}">
 								两次输入的密码不一致!
 							</div>								
