用户管理添加权限设置，对帖子分类的UI进行了美化，保存了最新数据的sql

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -147,8 +147,8 @@
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
 								<!--如果跳转路径有变量，要加上||。注意取变量是用$-->
-								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.title}" style="color:#69757d;font-size: 13px;font-weight:bold">备战春招，面试刷题跟他复习，一个月全搞定！</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.kindName}" style="font-weight:bold;font-size: 13px"></a>
+								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.title}" style="color:#69757d;font-size: 13px;font-weight:bold">备战春招，面试刷题跟他复习，一个月全搞定！</a>&nbsp;
+								<span class="badge badge-secondary bg-info" th:utext="${map.post.kindName}"></span>
 								<span class="badge badge-secondary bg-primary" th:if="${map.post.type==1}">置顶</span>
 								<span class="badge badge-secondary bg-danger" th:if="${map.post.status==1}">精华</span>
 							</h6>
