--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -24,8 +24,8 @@
 				<h6 class="mb-4">
 					<img src="http://static.nowcoder.com/images/img/icons/ico-discuss.png"/>
 					<!--使用utext标题如果是标签将正常显示，&lt;会显示为小于号-->
-					<span th:utext="${post.title}" style="font-weight:bold">备战春招，面试刷题跟他复习，一个月全搞定！</span>&nbsp;&nbsp;&nbsp;&nbsp;
-					<span th:utext="${post.kindName}" style="font-weight:bold"></span>
+					<span th:utext="${post.title}" style="font-weight:bold">备战春招，面试刷题跟他复习，一个月全搞定！</span>&nbsp;&nbsp;
+					<span class="badge badge-secondary bg-info" th:utext="${post.kindName}"></span>
 					<div class="float-right">
 						<input type="hidden" id="postId" th:value="${post.id}">
 						<button type="button" th:class="|btn ${post.type==1?'btn-secondary':'btn-danger'} btn-sm|" id="topBtn"
